tdf#160469 Ctrl+Alt+F4 is marked reserved, but doesn't do anything

this used to be SV_SHORTCUT_DOCKUNDOCK, which was introduced in

    commit b342b183aaea042ef0e6e1c75304072cb4e1375a
    Author: Rüdiger Timm <rt@openoffice.org>
    Date:   Tue Jul 24 09:03:18 2007 +0000
    INTEGRATION: CWS mergesvp (1.1.2); FILE ADDED

I assume this was a solaris or something similar system hotkey, so
remove it as no longer being relevant.

Certainly nothing inside the vcl code is handling it specially.

Change-Id: I80b9d293e7db42e1ff523319862d44b93d3231c8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166502
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit bced98442d5e9c4b55ec6d4e5da3d549f8141359)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166513
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
(cherry picked from commit 6b9cd13f502363c1784cdcb4538b6409a3a14c83)